--- a/Missing Value Estimation_2_CW_MH.ipynb
+++ b/Missing Value Estimation_2_CW_MH.ipynb
@@ -446,367 +446,6 @@
       "\n",
       "DataFrame After KNN Imputation:\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>40</th>\n",
-       "      <th>41</th>\n",
-       "      <th>42</th>\n",
-       "      <th>43</th>\n",
-       "      <th>44</th>\n",
-       "      <th>45</th>\n",
-       "      <th>46</th>\n",
-       "      <th>47</th>\n",
-       "      <th>48</th>\n",
-       "      <th>49</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.688728</td>\n",
-       "      <td>-0.212720</td>\n",
-       "      <td>0.498783</td>\n",
-       "      <td>0.836527</td>\n",
-       "      <td>0.753066</td>\n",
-       "      <td>-0.212667</td>\n",
-       "      <td>0.942724</td>\n",
-       "      <td>-0.452367</td>\n",
-       "      <td>-0.077101</td>\n",
-       "      <td>0.276231</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.179593</td>\n",
-       "      <td>0.694768</td>\n",
-       "      <td>0.617762</td>\n",
-       "      <td>-0.040676</td>\n",
-       "      <td>0.067808</td>\n",
-       "      <td>0.032745</td>\n",
-       "      <td>0.701679</td>\n",
-       "      <td>0.272815</td>\n",
-       "      <td>0.242996</td>\n",
-       "      <td>0.044602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.109563</td>\n",
-       "      <td>0.110242</td>\n",
-       "      <td>-0.219114</td>\n",
-       "      <td>-0.007928</td>\n",
-       "      <td>-0.126895</td>\n",
-       "      <td>0.312428</td>\n",
-       "      <td>0.205479</td>\n",
-       "      <td>0.228858</td>\n",
-       "      <td>0.336438</td>\n",
-       "      <td>0.152407</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.231804</td>\n",
-       "      <td>-0.004617</td>\n",
-       "      <td>-0.483945</td>\n",
-       "      <td>-0.056103</td>\n",
-       "      <td>-0.324140</td>\n",
-       "      <td>-0.152420</td>\n",
-       "      <td>-0.259235</td>\n",
-       "      <td>-0.152041</td>\n",
-       "      <td>-0.487165</td>\n",
-       "      <td>-0.600970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.738929</td>\n",
-       "      <td>-0.109915</td>\n",
-       "      <td>-0.584726</td>\n",
-       "      <td>0.184901</td>\n",
-       "      <td>-0.124804</td>\n",
-       "      <td>-0.182223</td>\n",
-       "      <td>0.106920</td>\n",
-       "      <td>-0.280529</td>\n",
-       "      <td>-0.166102</td>\n",
-       "      <td>-0.379498</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.278944</td>\n",
-       "      <td>-0.178492</td>\n",
-       "      <td>-0.109231</td>\n",
-       "      <td>-0.030136</td>\n",
-       "      <td>-0.276224</td>\n",
-       "      <td>-0.171074</td>\n",
-       "      <td>-0.222567</td>\n",
-       "      <td>-0.309774</td>\n",
-       "      <td>-0.180418</td>\n",
-       "      <td>-0.074048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.245575</td>\n",
-       "      <td>-0.073991</td>\n",
-       "      <td>-0.317213</td>\n",
-       "      <td>-0.238237</td>\n",
-       "      <td>-0.234355</td>\n",
-       "      <td>-0.455127</td>\n",
-       "      <td>-0.326878</td>\n",
-       "      <td>-0.493662</td>\n",
-       "      <td>-0.123100</td>\n",
-       "      <td>-0.380940</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.353774</td>\n",
-       "      <td>0.285639</td>\n",
-       "      <td>0.233876</td>\n",
-       "      <td>0.088700</td>\n",
-       "      <td>-0.025839</td>\n",
-       "      <td>-0.322532</td>\n",
-       "      <td>0.433586</td>\n",
-       "      <td>0.323603</td>\n",
-       "      <td>0.360877</td>\n",
-       "      <td>0.236961</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.239510</td>\n",
-       "      <td>0.034342</td>\n",
-       "      <td>0.283365</td>\n",
-       "      <td>0.047755</td>\n",
-       "      <td>0.235801</td>\n",
-       "      <td>0.128286</td>\n",
-       "      <td>0.322175</td>\n",
-       "      <td>-0.216095</td>\n",
-       "      <td>-0.247166</td>\n",
-       "      <td>0.167056</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.237784</td>\n",
-       "      <td>0.439557</td>\n",
-       "      <td>-0.006479</td>\n",
-       "      <td>-0.157518</td>\n",
-       "      <td>0.073746</td>\n",
-       "      <td>0.063090</td>\n",
-       "      <td>0.761268</td>\n",
-       "      <td>0.321644</td>\n",
-       "      <td>0.199316</td>\n",
-       "      <td>-0.023753</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>753</th>\n",
-       "      <td>0.147915</td>\n",
-       "      <td>-0.146270</td>\n",
-       "      <td>0.076802</td>\n",
-       "      <td>0.293899</td>\n",
-       "      <td>0.200007</td>\n",
-       "      <td>-0.177462</td>\n",
-       "      <td>0.460558</td>\n",
-       "      <td>0.003164</td>\n",
-       "      <td>0.393134</td>\n",
-       "      <td>0.211305</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.019922</td>\n",
-       "      <td>0.591618</td>\n",
-       "      <td>0.128843</td>\n",
-       "      <td>0.041614</td>\n",
-       "      <td>0.137797</td>\n",
-       "      <td>-0.024003</td>\n",
-       "      <td>0.646414</td>\n",
-       "      <td>0.056936</td>\n",
-       "      <td>0.157091</td>\n",
-       "      <td>-0.354944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>754</th>\n",
-       "      <td>-0.449871</td>\n",
-       "      <td>0.465843</td>\n",
-       "      <td>0.674586</td>\n",
-       "      <td>0.208321</td>\n",
-       "      <td>0.208008</td>\n",
-       "      <td>0.399202</td>\n",
-       "      <td>0.584391</td>\n",
-       "      <td>-0.081353</td>\n",
-       "      <td>0.523234</td>\n",
-       "      <td>-0.790732</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.075985</td>\n",
-       "      <td>0.105754</td>\n",
-       "      <td>1.093120</td>\n",
-       "      <td>0.670867</td>\n",
-       "      <td>0.674367</td>\n",
-       "      <td>0.261048</td>\n",
-       "      <td>0.386092</td>\n",
-       "      <td>0.494591</td>\n",
-       "      <td>1.053865</td>\n",
-       "      <td>0.623225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>755</th>\n",
-       "      <td>0.774203</td>\n",
-       "      <td>0.278174</td>\n",
-       "      <td>0.005073</td>\n",
-       "      <td>0.780210</td>\n",
-       "      <td>0.193115</td>\n",
-       "      <td>0.185872</td>\n",
-       "      <td>1.035979</td>\n",
-       "      <td>-0.073586</td>\n",
-       "      <td>0.202814</td>\n",
-       "      <td>0.412057</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.076009</td>\n",
-       "      <td>0.814107</td>\n",
-       "      <td>0.298956</td>\n",
-       "      <td>-0.023306</td>\n",
-       "      <td>-0.004075</td>\n",
-       "      <td>0.008666</td>\n",
-       "      <td>0.588999</td>\n",
-       "      <td>0.196888</td>\n",
-       "      <td>0.163755</td>\n",
-       "      <td>-0.406924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>756</th>\n",
-       "      <td>0.240036</td>\n",
-       "      <td>0.114697</td>\n",
-       "      <td>0.044389</td>\n",
-       "      <td>0.598281</td>\n",
-       "      <td>0.140374</td>\n",
-       "      <td>0.210312</td>\n",
-       "      <td>0.879964</td>\n",
-       "      <td>-0.051509</td>\n",
-       "      <td>0.498237</td>\n",
-       "      <td>0.373390</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.049314</td>\n",
-       "      <td>0.785388</td>\n",
-       "      <td>0.194695</td>\n",
-       "      <td>0.055395</td>\n",
-       "      <td>0.223582</td>\n",
-       "      <td>0.562165</td>\n",
-       "      <td>0.527863</td>\n",
-       "      <td>0.415455</td>\n",
-       "      <td>0.257230</td>\n",
-       "      <td>-0.447356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>757</th>\n",
-       "      <td>-0.344451</td>\n",
-       "      <td>-0.005629</td>\n",
-       "      <td>-0.486805</td>\n",
-       "      <td>-0.655308</td>\n",
-       "      <td>-0.536342</td>\n",
-       "      <td>-0.337252</td>\n",
-       "      <td>-0.589607</td>\n",
-       "      <td>-0.380977</td>\n",
-       "      <td>0.097221</td>\n",
-       "      <td>-0.667712</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.732214</td>\n",
-       "      <td>-0.363007</td>\n",
-       "      <td>-0.579639</td>\n",
-       "      <td>-0.684276</td>\n",
-       "      <td>-0.109037</td>\n",
-       "      <td>0.031219</td>\n",
-       "      <td>-0.273434</td>\n",
-       "      <td>-0.121937</td>\n",
-       "      <td>0.763548</td>\n",
-       "      <td>-0.503384</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>758 rows × 50 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           0         1         2         3         4         5         6   \\\n",
-       "0    0.688728 -0.212720  0.498783  0.836527  0.753066 -0.212667  0.942724   \n",
-       "1   -0.109563  0.110242 -0.219114 -0.007928 -0.126895  0.312428  0.205479   \n",
-       "2   -0.738929 -0.109915 -0.584726  0.184901 -0.124804 -0.182223  0.106920   \n",
-       "3    0.245575 -0.073991 -0.317213 -0.238237 -0.234355 -0.455127 -0.326878   \n",
-       "4    0.239510  0.034342  0.283365  0.047755  0.235801  0.128286  0.322175   \n",
-       "..        ...       ...       ...       ...       ...       ...       ...   \n",
-       "753  0.147915 -0.146270  0.076802  0.293899  0.200007 -0.177462  0.460558   \n",
-       "754 -0.449871  0.465843  0.674586  0.208321  0.208008  0.399202  0.584391   \n",
-       "755  0.774203  0.278174  0.005073  0.780210  0.193115  0.185872  1.035979   \n",
-       "756  0.240036  0.114697  0.044389  0.598281  0.140374  0.210312  0.879964   \n",
-       "757 -0.344451 -0.005629 -0.486805 -0.655308 -0.536342 -0.337252 -0.589607   \n",
-       "\n",
-       "           7         8         9   ...        40        41        42  \\\n",
-       "0   -0.452367 -0.077101  0.276231  ...  0.179593  0.694768  0.617762   \n",
-       "1    0.228858  0.336438  0.152407  ... -0.231804 -0.004617 -0.483945   \n",
-       "2   -0.280529 -0.166102 -0.379498  ... -0.278944 -0.178492 -0.109231   \n",
-       "3   -0.493662 -0.123100 -0.380940  ...  0.353774  0.285639  0.233876   \n",
-       "4   -0.216095 -0.247166  0.167056  ...  0.237784  0.439557 -0.006479   \n",
-       "..        ...       ...       ...  ...       ...       ...       ...   \n",
-       "753  0.003164  0.393134  0.211305  ...  0.019922  0.591618  0.128843   \n",
-       "754 -0.081353  0.523234 -0.790732  ... -0.075985  0.105754  1.093120   \n",
-       "755 -0.073586  0.202814  0.412057  ...  0.076009  0.814107  0.298956   \n",
-       "756 -0.051509  0.498237  0.373390  ... -0.049314  0.785388  0.194695   \n",
-       "757 -0.380977  0.097221 -0.667712  ... -0.732214 -0.363007 -0.579639   \n",
-       "\n",
-       "           43        44        45        46        47        48        49  \n",
-       "0   -0.040676  0.067808  0.032745  0.701679  0.272815  0.242996  0.044602  \n",
-       "1   -0.056103 -0.324140 -0.152420 -0.259235 -0.152041 -0.487165 -0.600970  \n",
-       "2   -0.030136 -0.276224 -0.171074 -0.222567 -0.309774 -0.180418 -0.074048  \n",
-       "3    0.088700 -0.025839 -0.322532  0.433586  0.323603  0.360877  0.236961  \n",
-       "4   -0.157518  0.073746  0.063090  0.761268  0.321644  0.199316 -0.023753  \n",
-       "..        ...       ...       ...       ...       ...       ...       ...  \n",
-       "753  0.041614  0.137797 -0.024003  0.646414  0.056936  0.157091 -0.354944  \n",
-       "754  0.670867  0.674367  0.261048  0.386092  0.494591  1.053865  0.623225  \n",
-       "755 -0.023306 -0.004075  0.008666  0.588999  0.196888  0.163755 -0.406924  \n",
-       "756  0.055395  0.223582  0.562165  0.527863  0.415455  0.257230 -0.447356  \n",
-       "757 -0.684276 -0.109037  0.031219 -0.273434 -0.121937  0.763548 -0.503384  \n",
-       "\n",
-       "[758 rows x 50 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -820,7 +459,8 @@
     "imputed_df = pd.DataFrame(imputed_data, columns=df.columns)\n",
     "\n",
     "print(\"\\nDataFrame After KNN Imputation:\")\n",
-    "imputed_df"
+    "imputed_df\n",
+    "imputed_df.to_csv('WongMissingResult2.csv')"
    ]
   }
  ],
